# yarax_android

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.gradle.kts  build.rs  proguard-rules.pro  shell.nix
src/: lib.rs
src/main/: AndroidManifest.xml
src/main/java/org/revengi/abhi/yarax/: Compiler.java  Rules.java  Scanner.java
