[package]
name = "yarax_android"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = "0.21.1"
serde_json = "1.0.149"
yara-x = { vpath = "./yarax_patches/yara-x/lib", default-features = false, features = ["dex-module", "hash-module", "crypto", "inventory", "pe-module", "elf-module"]}

[lib]
name = "yarax_android"
crate-type = ["cdylib"]
