[package]
name = "yarax_android"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = "0.21.1"
serde_json = "1.0.149"
yara-x = { path = "./yarax_patches/yara-x/lib", default-features = false, features = ["dex-module", "hash-module", "crypto", "pe-module", "elf-module", "generate-proto-code"]}

[lib]
name = "yarax_android"
crate-type = ["cdylib"]
